# MdExplorer

./: .claude.json  .gitignore  .gitmodules  .mcp.json  .mdchangeignore  .mdignore  AI-REQUIREMENTS.md  ANALISI-PROBLEMA-SCROLLING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GitAuthenticationAnalysis.md  GitCredentialTest.cs  LICENSE  MdExplorer.md  MdExplorer.sln  MdExplorer;.md;eisvogel.tex  README.md  SECURITY.md  Test-Document.md  Test-Fix-Bug-Directory.md  WindowsCredentialStoreResolver_Enhanced.cs  build-linux.sh  credential_target_analysis.md  evoluzione-file-system-selector.md  install-dependencies.sh  install-linux-dependencies.sh  librerie-licenze.docx  librerie-licenze.md  npm-licenses-angular-project.md  package-lock.json  package.json  refactoringGIT.md  refactoringShowFile.md  run-mdexplorer.sh  start-mdexplorer.sh  startangular.bat  startangular.ps1  test-word-template-pages.md  test.json  (+6 more)
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.md/: CLAUDE.md1ce474cf30a669aac0746f0684a22198.html  CLAUDE.md2240d3ed16c214231494c5ac66abcb51.html  EvoluzionDal.md4b428ed16f36b5e0ddc1211c4dbc28c7.html  EvoluzionDal.mde9cb43ebb97a6a2850d3e1765210aaa1.html  EvoluzioneDal.mde9cb43ebb97a6a2850d3e1765210aaa1.html  Home.mdf83235a1bf8cf96438e812759fe048ce.html  MdExplorer---Features.md35d345ad7d831608c86f585731f780bf.html  MdExplorer---Features.md9317454c2e521666bf6de8f4a6877379.html  MdExplorer.md11fc2272ac31ed6e255024d55de11183.html  (+10 more)
Ad.Tools.Dal.Evo/: Class1.cs  (+5 more)
mdexplorer-hp/: Cargo.toml
mdexplorer-hp/src/: main.rs
(+1241 files in other folders)
