[package]
name = "mdexplorer-hp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "all-databases", "macros" ] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
regex="1.8.3"

